--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-timeago": "^4.1.7",
     "@types/uniqid": "^5.3.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
