--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "axios": "^1.6.8",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
+    "quill": "^2.0.3",
     "react": "^18",
     "react-country-state-city": "^1.1.0",
     "react-dom": "^18",
+    "react-quill": "^2.0.0",
     "react-timeago": "^7.2.0",
+    "react-toastify": "^11.0.5",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
