--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.1",
     "@radix-ui/themes": "^3.0.5",
+    "@vercel/analytics": "^1.5.0",
     "@workos-inc/authkit-nextjs": "^0.5.3",
     "@workos-inc/node": "^7.46.0",
     "axios": "^1.6.8",
